	(epackage-cmd-autoload-package): Check download status.
	(epackage-cmd-activate-package): Check download status.
	(epackage-cmd-deactivate-package): Check no files.
	(epackage-cmd-disable-package): Check no files.
	(epackage-config-delete-all): Return list of deleted files.
	(epackage-cmd-clean-package): Check nothing to clean.
	(epackage-cmd-upgrade-package): Improve message.

2010-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--sources-package-name): update docstirng.
	(epackage--sources-list-url): Add defcustom tags.
	(epackage--sources-file-list): New.
	(epackage-file-name-conf-directory): New.
	(epackage-file-name-sources-list-main): New.
	(epackage-sources-list-p): Use `epackage--sources-file-name-main'.
	(epackage-sources-list-verify): Use `epackage--sources-file-name-main'.
	(epackage-sources-list-p): Use `epackage--sources-file-name-main'.
	(epackage-sources-list-verify): Use `epackage--sources-file-name-main'.
	(epackage-with-sources-list): Use `epackage-file-name-sources-list-main'.
	(epackage-cmd-build-sources-list): New.
	(epackage-initialize): Call `epackage-cmd-build-sources-list'.
	(epackage-require-directories): Add more directories.

2010-12-09 Thu  Jari Aalto  <jari.aalto@cante.net>

	* README (README::Project Details): Add Wiki URL.

	* Makefile (ui): Use BIN, remove -nw option.

	* epackage.el
	(top level): Update documentation. Run Elint and Checkdoc on code
	and fix problems. Add *-examples.el to Specification.
	(epackage-manager): New.
	(epackage-manager): Add `error'. Not implemented.
	(epackage-batch-ui-download-sources-list): Remove duplicate.
	(epackage--batch-ui-menu-actions): Correct function
	to `epackage-batch-ui-enable-package'.
	(epackage-sources-list-info-main): Do not require matching anything
	in DESCRIPTION part.
	(epackage--sources-list-regexp): New.
	(epackage-sources-list-info-parse-line): Use
	`epackage--sources-list-regexp'.
	(epackage-sources-list-info-main): Use
	`epackage--sources-list-regexp'.